Move to HTTPS on the internal network, between the autoscaling instance and the public load balancer.

--- a/templates/aws-mirovoy-ref-arch-04-php-my-admin.yaml
+++ b/templates/aws-mirovoy-ref-arch-04-php-my-admin.yaml
@@ -208,8 +208,8 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       Name: phpMyAdminTargets
-      Port: 80
-      Protocol: HTTP
+      Port: 443
+      Protocol: HTTPS
       TargetType: instance
       VpcId: !Ref Vpc
 
