--- a/templates/aws-mirovoy-ref-arch-04-php-my-admin.yaml
+++ b/templates/aws-mirovoy-ref-arch-04-php-my-admin.yaml
@@ -25,6 +25,11 @@ Metadata:
       - Label:
           default: phpMyAdmin Configuration
         Parameters:
+          - BlowfishSecret
+          - RDSAddress
+      - Label:
+          default: ec2 Autoscaling and Instance Configuration
+        Parameters:
           - AdminUser
           - AdminPubKey
           - phpAMIOS
@@ -57,6 +62,8 @@ Metadata:
         default: Alternative superuser account to create
       AdminPubKey:
         default: SSH public key for the AdminUser
+      BlowfishSecret:
+        default: Blowfish Secret
       DnsName:
         default: 'The fully-qualified domain name for the phpMyAdmin server
 	  (e.g., phpmyadmin.example.com).  NB: This should be assigned to the
@@ -73,6 +80,8 @@ Metadata:
         default: Number of subnets
       PublicAlbListenerArn:
         default: Public Alb Listener Arn
+      RDSAddress:
+        default: RDS Address
       Subnet:
         default: Subnets
       Vpc:
@@ -85,7 +94,7 @@ Parameters:
       For sanity's sake, confining this to starting with a lower-case letter,
       followed by an arbitrary number of lower-case letters, numbers, and the
       dash character ('-')."
-    Description: 'An alternate account to be created on phpMyAdmin instances 
+    Description: 'An alternate account to be created on phpMyAdmin instances
       with superuser permissions.'
     Type: String
   AdminPubKey:
@@ -105,6 +114,19 @@ Parameters:
     Description: 'Specify an alternative initialization script to run during
       setup.'
     Default: ""
+    Type: String
+  BlowfishSecret:
+    Default: ''
+    Description: 'phpmyadmin uses this to encrypt the password
+      stored in the cookie. From the docs: The “cookie” auth_type
+      uses AES algorithm to encrypt the password. If you are using
+      the “cookie” auth_type, enter here a random passphrase of
+      your choice. It will be used internally by the AES algorithm:
+      you won’t be prompted for this passphrase.
+
+      The secret should be 32 characters long. Using shorter will lead
+      to weaker security of encrypted cookies, using longer will cause
+      no harm.'
     Type: String
   CFAssetsBucket:
     AllowedPattern: "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$"
@@ -160,6 +182,10 @@ Parameters:
     Type: AWS::EC2::SecurityGroup::Id
   PublicAlbListenerArn:
     Description: "The public application load balancer listener's arn."
+    Type: String
+  RDSAddress:
+    Description: "The internal DNS name or IP address of the primary database
+      server."
     Type: String
   S3KeyPrefix:
     AllowedPattern: "^([0-9a-zA-Z-]+/)*$"
@@ -379,15 +405,53 @@ Resources:
               mode: "000644"
               owner: "root"
               group: "root"
+            /tmp/config.inc.php:
+              content: !Sub |
+                <?php
+                /* vim: set expandtab sw=4 ts=4 sts=4: */
+                /**
+                 * phpMyAdmin sample configuration, you can use it as base for
+                 * manual configuration. For easier setup you can use setup/
+                 *
+                 * All directives are explained in documentation in the doc/
+                 * folder or at <https://docs.phpmyadmin.net/>.
+                 *
+                 * @package PhpMyAdmin
+                 */
+
+                /**
+                 * This is needed for cookie based authentication to encrypt
+                 * password in cookie. Needs to be 32 chars long.
+                 *
+                 * YOU MUST FILL IN THIS FOR COOKIE AUTH!
+                 */
+                $cfg['blowfish_secret'] = '${BlowfishSecret}';
+
+                /**
+                 * Servers configuration
+                 */
+                $i = 0;
+
+                /**
+                 * First server
+                 */
+                $i++;
+                /* Authentication type */
+                $cfg['Servers'][$i]['auth_type'] = 'cookie';
+                /* Server parameters */
+                $cfg['Servers'][$i]['host'] = '${RDSAddress}';
+                $cfg['Servers'][$i]['compress'] = false;
+                $cfg['Servers'][$i]['AllowNoPassword'] = false;
+              mode: "000644"
+              owner: "root"
+              group: "root"
           commands:
             01_bootstrap:
               command: !If
                 - CreateAltAdmin
-                - !Join ["", [
-                    "./tmp/php_bootstrap.sh",
-                    " --admin-user ",
-                    !Ref AdminUser
-                  ]]
+                - !Join ["", ["./tmp/php_bootstrap.sh",
+                              " --admin-user ",
+                              !Ref AdminUser]]
                 - "./tmp/php_bootstrap.sh"
             # we need EPEL to get phpmyadmin
             02_make_epel_available:
@@ -423,9 +487,26 @@ Resources:
                                "--strip-components 1"]]
               cwd: /var/www/html/
               test: "[ -d /var/www/html/phpMyAdmin -a -f /tmp/phpmyadmin.tgz ]"
-            10_touch_index:
+            10_config_phpmyadmin:
+              command: mv /tmp/config.inc.php .
+              cwd: /var/www/html/phpMyAdmin
+              test: "[ ! -e config.inc.php -a -e /tmp/config.inc.php ]"
+            11_touch_index:
+              # so the loadbalancer correctly detects instance health
               command: touch /var/www/html/index.html
               test: "[ ! -e /var/www/html/index.html ]"
+            12_apache_header_update_fix:
+              # There is currently a bug in Apache:
+              # https://bz.apache.org/bugzilla/show_bug.cgi?id=59311
+              #
+              # such that it sends Upgrade headers when SSL is used. This is
+              # against the spec, and in particular screws up at least Safari.
+              # Since we're always using HTTPS, we shouldn't ever need to send
+              # the Upgrade headers, so we just nuke it (at least until the
+              # Apache bug is fixed)
+              command: "sed -i '/^<VirtualHost/a Header unset Upgrade' ssl.conf"
+              cwd: /etc/httpd/conf.d
+              test: "! grep -l Upgrade ssl.conf"
           services:
             sysvinit:
               httpd:
