Output private DNS name for use in other stacks.

--- a/templates/aws-mirovoy-ref-arch-04-mail.yaml
+++ b/templates/aws-mirovoy-ref-arch-04-mail.yaml
@@ -2501,3 +2501,7 @@ Resources:
       InstanceId: !Ref MailServerInstance
       VolumeId:
         Fn::ImportValue: !Sub '${StorageStackName}:MasterLogEBS'
+
+Outputs:
+  PrimaryMailServerPrivateDNS:
+    Value: !GetAtt MailServerInstance.PrivateDnsName
